fix: result title align

--- a/src/pages/Result/Result.style.scss
+++ b/src/pages/Result/Result.style.scss
@@ -1,6 +1,7 @@
 .result-title {
 	display: grid;
 	grid-template-columns: 1fr auto;
+	align-items: flex-start;
 }
 
 .result-questions {
